# dibbs-text-to-code

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: check_lint.yml  check_types.yml  check_unit_tests.yml  release.yml  slack_notifier_merged.yml  slack_notifier_open_pulls.yml  slack_notifier_review.yml
data/: README.md
data/snoinc_extracts/: hl7_lab_interp_20250911.csv  snomed_lab_value_20250911.csv
data/training_files/: part_description_sentences.txt  validation_toy.txt
data_curation/: README.md  augmentation.py  terminology_valueset_sync.py
data_curation/loinc/: get_loinc_parts_abrv_synonyms.sql  loinc_codes_with_part_descriptions.sql
dev_scripts/: README.md  bootstrap.sh  version_name.sh
docs/: releases.md
model_tuning/: performance.py  tsdae.py
scripts/: bootstrap.sh  open_pulls.sh  synthetic_lab_results.py  terminology_valueset_sync.py  version_name.sh
scripts/value_sets/: terminology_valueset_sync.py
scripts/value_sets/assets/: hl7_lab_interp.csv  loinc_lab_orders.csv
src/: regex_patterns.py
src/dibbs_text_to_code/: augmentation.py  main.py  performance.py  s3_handler.py  test.json  tsdae.py
src/dibbs_text_to_code/data_curation_augmentation/: data_transformer.py
src/dibbs_text_to_code/schemas/: __init__.py  augmentation.py  aws.py
tests/unit/: conftest.py  test_augmentation.py  test_data_transformer.py  test_main.py  test_path.py  test_s3_handler.py
tests/unit/schemas/: test_augmentation.py
utils/: path.py
